--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -1,329 +1,346 @@
-.header {
-  border-bottom: #E9E8E8 1px solid;
+input,
+select {
+  border: 1px solid #E3DED9;
+  color: #8B7969;
 }
 
-.header__inner {
-  margin: 0 auto;
-  padding: 20px 15px;
-  max-width: 1230px;
-  text-align: center;
-  display: flex;
+.admin__inner {
+  margin: 32px auto 0;
+  width: 84%;
 }
 
-.header__logo {
-  color: #908071;
-  text-decoration: none;
-  font-size: 36px;
-  font-family: serif;
-  font-weight: bold;
-  margin: 0 auto;
-}
-
-.logout__button {
-  width: 100px;
-}
-.logout__button button {
-  width: 100%;
-   padding: 10px;
-   border: 1px solid #8B7969;
-   border-radius: 3px;
-   background: #F1ECE6;
-   color: #8B7969;
-   cursor: pointer;
-  }
-
-h2 {
-  color: #908071;
-  font-family: serif;
-  font-size: 24px;
-}
-
-.admin-header__inner {
-  margin-bottom: 40px;
-  text-align: center;
-}
-
+/* フォーム */
 .search-form {
-  margin: 0 auto;
-  width: 1230px;
-  /*border: 1px red solid;*/
+  display: flex;
+  align-items: stretch;
+  flex-wrap: wrap;
+
+  gap: 24px;
 }
 
-.search-form__inner {
-  margin: 0 auto;
-  width: 100%;
-}
-.search-form__item {
-  width: 100%;
-  height: 50px;
-  justify-content: center;
-  align-items: baseline;
-}
-
-.search-form__item-wrap {
-  display: inline-block;
-  position: relative;
-  width: 35%;
-  height: 50px;
-  margin-bottom: 20px;
-  margin-right: 40px;
-  border: 1px #EFEDEA solid;
+.search-form__keyword-input {
+  padding: 8px 12px;
+  /* placeholderが表示される最低限の幅を最小値とする */
+  min-width: 324px;
+  border: 1px solid #E3DED9;
   background-color: #FBFBFB;
-  .search-form__item-input {
-    background-color: #FBFBFB;
-    border: none;
-    color: #EFEDEA;
-    padding: 5px 15px 5px 15px;
-    width: 85%;
-  }
-  .search-form__item-input-button {
-    background: url('') no-repeat center left 11px / 16px 16px;
-    width: 15%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    right: 0;
-    &::before {
-      background: #022462;
-      content: "";
-      display: block;
-      width: 1px;
-      height: 20px;
-      position: absolute;
-      bottom: 0;
-      top: 0;
-      left: 0;
-      margin: auto;
-    }
-  }
 }
 
-.search-form__item-gender {
-  width: 12%;
-  margin-right: 40px;
-  padding: 10px;
-  background-color: #F4F4F4;
-  color: #AA9D92;
-  border: 1px solid #AA9D92;
-  font-weight: bold;
-}
-
-.search-form__item-category {
-  width: 20%;
-  margin-right: 40px;
-  padding: 10px;
-  background-color: #F4F4F4;
-  color: #AA9D92;
-  border: 1px solid #AA9D92;
-  font-weight: bold;
-}
-.search-form__item-date {
+.search-form__gender,
+.search-form__category {
   position: relative;
-  display: inline-block;
-  width: 22%;
-  height: 36px;
-  background-color: #F4F4F4;
-  color: #AA9D92;
-  border: 1px solid #AA9D92;
-  font-weight: bold;
 }
 
-.search-form__item-date input[type="date"] {
+.search-form__gender::after,
+.search-form__category::after {
+  position: absolute;
+  top: 50%;
+  right: 8%;
+  width: 0;
+  height: 0;
+  border-top: 12px solid #BEB1A6;
+  border-right: 8px solid transparent;
+  border-left: 8px solid transparent;
+  content: "";
+  transform: translateY(-50%);
+}
+
+.search-form__gender-select,
+.search-form__category-select {
+  padding: 8px 12px;
+  height: 100%;
+  background-color: #F4F4F4;
+}
+
+.search-form__gender-select {
+  min-width: 96px;
+}
+
+.search-form__category-select {
+  min-width: 220px;
+}
+
+.search-form__date {
   position: relative;
-  padding: 0 10px;
-  width: 100%;
-  height: 36px;
-  border: 0;
-  background: transparent;
-  box-sizing: border-box;
-  font-weight: bold;
-  color: #AA9D92;
-}
-
-.search-form__item-date input[type="date"]::-webkit-inner-spin-button{
-  -webkit-appearance: none;
-}
-.search-form__item-date input[type="date"]::-webkit-clear-button{
-  -webkit-appearance: none;
-}
-.middle__content {
-  width: 1230px;
-  margin: 30px auto;
-  display: flex;
-  justify-content: space-between;
-}
-
-.export__button {
-  width: 150px;
+  padding: 8px 12px;
+  min-width: 140px;
+  border: 1px solid #E3DED9;
   background-color: #F4F4F4;
 }
-.export__button-submit {
-  width: 100%;
-  color: #AA9D92;
-  font-weight: bold;
-  border: 1px solid #AA9D92;
-}
 
-/*.pagination {
-  display: -ms-flexbox;
-  display: flex;
-  padding-left: 0;
-  list-style: none;
-  /*border-radius: 0.25rem;
-}*/
-
-/*.page-link {
-  position: relative;
-  display: block;
-  padding: 0.5rem 0.75rem;
-  margin-left: -1px;
-  line-height: 1.25;
-  color: #AA9D92;
-  background-color: #F4F4F4;
-  border: 1px solid #AA9D92;
-}*/
-
-.page-link:hover {
-  z-index: 2;
-  color: #0056b3;
-  text-decoration: none;
-  background-color: #e9ecef;
-  border-color: #dee2e6;
-}
-
-.page-link:focus {
-  z-index: 2;
-  outline: 0;
-  /*box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);*/
-}
-
-.page-item:first-child .page-link {
-  margin-left: 0;
-  border-top-left-radius: 0.25rem;
-  border-bottom-left-radius: 0.25rem;
-}
-
-.page-item:last-child .page-link {
-  border-top-right-radius: 0.25rem;
-  border-bottom-right-radius: 0.25rem;
-}
-
-.page-item.active .page-link {
+.search-form__date::-webkit-calendar-picker-indicator {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
   z-index: 1;
-  color: #fff;
-  background-color: #AA9D92;
-  border-color: #AA9D92;
+  width: auto;
+  height: auto;
+  background: transparent;
 }
 
-.page-item.disabled .page-link {
-  color: #6c757d;
-  pointer-events: none;
-  cursor: auto;
+.search-form__date::after {
+  position: absolute;
+  top: 50%;
+  right: 12px;
+  width: 0;
+  height: 0;
+  border-top: 12px solid #BEB1A6;
+  border-right: 8px solid transparent;
+  border-left: 8px solid transparent;
+  content: "";
+  transform: translateY(-50%);
+}
+
+.search-form__actions {
+  display: flex;
+
+  gap: 24px;
+}
+
+.search-form__search-btn,
+.search-form__reset-btn {
+  padding: 12px;
+  width: 90px;
+}
+
+.search-form__reset-btn {
+  background-color: #D9C6B5;
+}
+
+/* エクスポートボタン */
+.export-form {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 32px;
+}
+
+.export__btn {
+  background-color: #E1DBD6;
+  color: #8B7969;
+  font-weight: 400;
+}
+.pagination {
+  display: flex;
+  justify-content: center;
+  list-style: none;
+}
+
+.pagination li:not(.active) {
+  border: 1px solid #E0DFDE;
+  padding: 4px 12px;
+}
+
+.pagination li:not(:last-child) {
+  border-right: none;
+}
+
+.pagination a {
+  color: #8B7969;
+  text-decoration: none;
+}
+
+.pagination__link {
+  text-decoration: none;
+}
+
+.active {
+  padding: 4px 12px;
+  border: 1px solid #8B7969;
+  background-color: #8B7969;
+  color: #FFF;
+}
+
+/* テーブル */
+.admin__table {
+  margin-top: 16px;
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.admin__row {
+  border: 1px solid #E0DFDE;
+}
+
+.admin__label,
+.admin__data {
+  padding: 16px 8px;
+}
+
+.admin__label:first-of-type,
+.admin__data:first-of-type {
+  padding-left: 48px;
+}
+
+.admin__label:last-of-type,
+.admin__data:last-of-type {
+  padding-right: 48px;
+}
+
+.admin__label {
+  background-color: #8B7969;
+  color: #FFF;
+  text-align: left;
+  font-weight: 400;
+}
+
+.admin__detail-btn {
+  padding: 8px 12px;
+  border: 1px solid #D9C6B5;
+  background-color: #F0F0F0;
+  color: #D9C6B5;
+  text-decoration: none;
+}
+
+/* モーダル */
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  visibility: hidden;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+}
+
+.modal:target {
+  visibility: visible;
+  opacity: 1;
+}
+
+.modal-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+.modal__inner {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 50%;
+  border: 1px solid #8B7969;
   background-color: #fff;
-  border-color: #dee2e6;
+  box-shadow: 4px 4px 4px rgba(139, 121, 105, 0.25);
+  transform: translate(-50%, -50%);
 }
 
-.pagination-lg .page-link {
-  padding: 0.75rem 1.5rem;
-  font-size: 1.25rem;
-  line-height: 1.5;
+.modal__content {
+  position: relative;
+  padding: 64px 64px;
 }
 
-.pagination-lg .page-item:first-child .page-link {
-  border-top-left-radius: 0.3rem;
-  border-bottom-left-radius: 0.3rem;
+.modal-form__group {
+  display: grid;
+  margin-top: 32px;
+
+  grid-template-columns: 1fr 2fr;
+  gap: 20px;
 }
 
-.pagination-lg .page-item:last-child .page-link {
-  border-top-right-radius: 0.3rem;
-  border-bottom-right-radius: 0.3rem;
+.modal-form__label {
+  font-weight: bold;
 }
 
-.pagination-sm .page-link {
-  padding: 0.25rem 0.5rem;
-  font-size: 0.875rem;
-  line-height: 1.5;
+.modal-form__delete-btn {
+  margin: 64px auto 0;
+  background-color: #BA370D;
+  color: #FFF;
 }
 
-.pagination-sm .page-item:first-child .page-link {
-  border-top-left-radius: 0.2rem;
-  border-bottom-left-radius: 0.2rem;
+.modal__close-btn {
+  position: absolute;
+  top: 32px;
+  right: 32px;
+  width: 32px;
+  height: 32px;
+  border: 1px solid #8B7969;
+  border-radius: 50%;
+  color: #8B7969;
+  text-align: center;
+  text-decoration: none;
 }
 
-.pagination-sm .page-item:last-child .page-link {
-  border-top-right-radius: 0.2rem;
-  border-bottom-right-radius: 0.2rem;
+html,
+body {
+  height: 100%;
 }
 
-.contact-table,
-.contact-table__inner {
-  width: 1230px;
+body, textarea, input {
+  color: #8B7969;
+}
+
+textarea::placeholder,
+input::placeholder {
+  color: #BEB1A6;
+}
+
+.app {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+/* ヘッダー */
+.header {
+  display: grid;
+  align-items: center;
+  padding: 16px 0;
+  height: 80px;
+  border: 1px solid #E0DFDE;
+  text-align: center;
+  font-family: serif;
+
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 1fr;
+}
+
+.header__heading {
+  font-weight: lighter;
+  font-size: 32px;
+
+  grid-column: 2;
+}
+
+.header__link {
   margin: 0 auto;
-  border: 1px solid #AA9D92;
+  width: 80px;
+  border: 1px solid #D9C6B5;
+  background-color: #F0F0F0;
+  color: #D9C6B5;
+  text-decoration: none;
+
+  grid-column: 3;
 }
 
-.contact-table__row {
-  width: 100%;
-  border-bottom: 1px solid #82756B;
-
-}
-
-.contact-table__header {
-  background-color: #82756B;
-  padding: 12px;
-  width: 20%;
-  text-align: left;
-  font: bold;
-  color: #ddd;
-}
-
-.contact-form__item {
+/* コンテンツ */
+.content {
   display: flex;
-  padding: 12px;
-  width: 100%;
-  text-align: left;
-  font: bold;
-  color: #ddd;
+  flex-direction: column;
+  flex-grow: 1;
+  justify-content: center;
+  padding: 48px;
 }
 
- .contact-table__header-span {
-   margin-right: 15%;
- }
-
-.contact-table__item {
-  display: flex;
-  padding: 0 20px;
-  color: #82756B;
+.content__heading {
+  text-align: center;
+  font-weight: 100;
+  font-size: 32px;
+  font-family: serif;
 }
 
-.contact-form__item-p {
-  color: #82756B;
+/* ボタン */
+.btn {
+  display: block;
+  padding: 8px 32px;
+  border: none;
+  background-color: #82756A;
+  color: #FFF;
+  font-size: 16px;
+  cursor: pointer;
 }
-
-  .contact-form__button {
-    margin-top: 15px;
-    text-align: center;
-  }
-  
-  .contact-form__button-submit {
-    padding: 10px;
-    width: 150px;
-    height: 50px;
-    border-radius: 3px;
-    cursor: pointer;
-    background-color: #FBFBFB;
-    border: 1px solid #EFEDEA;
-    color: #EFEDEA;
-    font-weight: bold;
-  }
-
-  .contact-form__button-reset {
-    margin: 10px auto 20px;
-    padding: 10px;
-    width: 150px;
-    height: 50px;
-    cursor: pointer;
-    background-color: #82756B;
-    color: #EFEDEA;
-    font-weight: bold;
-  }
